添加pypi制品